# dx12_imgui_test

./: CMakeLists.txt  README.md  build.bat  build_old.bat  config.toml  imgui.ini  main.cpp  ok.txt  resources.rc
config_parser/: parser.cxx  parser.hxx
dx_context/: directx_context.cxx  directx_context.hxx
exeptions/: exeptions.hxx
imgui_context/: imgui_context.cxx  imgui_context.hxx
styles/: spectrum.cxx  spectrum.hxx  style.cxx  style.hxx  styles.cxx  styles.hxx
widgets/: button.hxx  button_id_generator.cxx  button_id_generator.hxx  combo.hxx  id_generator.cxx  id_generator.hxx  imgui_custom_widgets.cxx  imgui_custom_widgets.hxx  input_text.cxx  input_text.hxx  resources.h  widget.hxx
widgets/center_control_helper/: center_control_helper.cxx  center_control_helper.hxx  center_control_helper_tp.cxx
windows/: initialize_windows.cxx  logger.cxx  logger.hxx  login_window.cxx  login_window.hxx  logo.cxx  main_window.cxx  main_window.hxx  test_window.cxx  window.hxx  window_decorator.cxx  window_decorator.hxx
windows/controler_z_order/: control_z_order.cxx  control_z_order.hxx
